{
    "name": "VRIF Action",
    "maps": [
        {
            "name": "Player",
            "id": "44f0e41b-94ca-43e7-bed1-02a16e276e6c",
            "actions": [
                {
                    "name": "LeftGrip",
                    "type": "Button",
                    "id": "ffe9adee-baf5-45a4-ae2e-397721b9f571",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightGrip",
                    "type": "Button",
                    "id": "ca231a3e-3a33-4ad1-be9e-62ec58dac59d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftVelocity",
                    "type": "Value",
                    "id": "54edd94f-b93a-4463-bab9-c514ce840ad8",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RightVelocity",
                    "type": "Value",
                    "id": "fcce8c80-6880-4ed0-9849-f07ac8324e42",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftTrigger",
                    "type": "Button",
                    "id": "eff1ac50-6123-4767-8ee4-734060423aaf",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "RightTrigger",
                    "type": "Button",
                    "id": "f17963f9-add3-4331-9135-cb2b57631a49",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClimbingLeftJump",
                    "type": "Button",
                    "id": "7a10cc76-2042-4ec4-8133-84ab03147f91",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ClimbingRightJump",
                    "type": "Button",
                    "id": "c474369e-6a09-443f-890e-43aae76cdfc4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interaction",
                    "type": "Button",
                    "id": "242dc2c2-2e0e-4d6a-be8b-d7c31a7b8c29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "UI_Menu",
                    "type": "Button",
                    "id": "66f0841f-4a5a-4e38-b4be-bfeea78cd541",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SlowMode",
                    "type": "Button",
                    "id": "3f101cf3-6825-4f48-90e4-732a56bf54d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "55cbd688-04e2-4d99-ba7d-4fbf30805e3c",
                    "path": "<XRController>{LeftHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84fd9a56-0d48-44f2-b00d-beab89e0a6fe",
                    "path": "<XRController>{RightHand}/gripPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightGrip",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "be1be55e-350c-49ea-b044-403dbee684fe",
                    "path": "<XRController>{LeftHand}/deviceVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftVelocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0a99f6db-84e4-4048-a5c9-da79eaaf27db",
                    "path": "<XRController>{RightHand}/deviceVelocity",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightVelocity",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eff9ef5b-2a88-4a17-bd3f-94f07d669b6f",
                    "path": "<XRController>{LeftHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "LeftTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e6c03e90-51e3-4c16-a99d-128fc23ccbca",
                    "path": "<XRController>{RightHand}/triggerPressed",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "RightTrigger",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "69ac29c0-057a-4c25-9101-eb66f501b685",
                    "path": "<XRController>{LeftHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "ClimbingLeftJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f0b1cbb7-f82b-468e-ae2b-6cbd211d3c6a",
                    "path": "<XRController>{RightHand}/primaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "ClimbingRightJump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "06c65e26-9417-4333-b099-0686f514337b",
                    "path": "<XRController>{LeftHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "Interaction",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ba3e5e30-2724-48e5-b961-8a1dfc2f42f9",
                    "path": "<XRController>{LeftHand}/menu",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "UI_Menu",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02220e52-9e65-4500-a48d-859568b1608b",
                    "path": "<XRController>{RightHand}/secondaryButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "XR",
                    "action": "SlowMode",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "XR",
            "bindingGroup": "XR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}